@@ -1,11 +1,16 @@
 package org.goafabric.personservice.controller;
 
+import org.goafabric.personservice.adapter.Callee;
+import org.goafabric.personservice.adapter.CalleeServiceAdapter;
 import org.goafabric.personservice.controller.dto.Address;
 import org.goafabric.personservice.controller.dto.Person;
-import org.goafabric.personservice.repository.PersonRepository;
+import org.goafabric.personservice.persistence.PersonRepository;
 import org.junit.jupiter.api.Test;
+import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.test.context.aot.DisabledInAotMode;
 
 import java.util.List;
 
@@ -13,6 +18,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
+@DisabledInAotMode
 class PersonControllerIT {
 
     @Autowired
@@ -21,16 +27,21 @@ class PersonControllerIT {
     @Autowired
     private PersonRepository personRepository;
 
+    @MockBean
+    private CalleeServiceAdapter calleeServiceAdapter;
+
     @Test
     public void findById() {
         List<Person> persons = personController.findAll();
         assertThat(persons).isNotNull().hasSize(3);
 
         final Person person
-                = personController.getById(persons.get(0).id());
+                = personController.getById(persons.getFirst().id());
         assertThat(person).isNotNull();
-        assertThat(person.firstName()).isEqualTo(persons.get(0).firstName());
-        assertThat(person.lastName()).isEqualTo(persons.get(0).lastName());
+        assertThat(person.firstName()).isEqualTo(persons.getFirst().firstName());
+        assertThat(person.lastName()).isEqualTo(persons.getFirst().lastName());
+
+        assertThat(personRepository.findById(persons.getFirst().id()).get().getOrganizationId()).isEqualTo("0");
     }
 
     @Test
@@ -44,25 +55,25 @@ class PersonControllerIT {
     public void findByFirstName() {
         List<Person> persons = personController.findByFirstName("Monty");
         assertThat(persons).isNotNull().hasSize(1);
-        assertThat(persons.get(0).firstName()).isEqualTo("Monty");
-        assertThat(persons.get(0).lastName()).isEqualTo("Burns");
-        assertThat(persons.get(0).address()).isNotEmpty();
+        assertThat(persons.getFirst().firstName()).isEqualTo("Monty");
+        assertThat(persons.getFirst().lastName()).isEqualTo("Burns");
+        assertThat(persons.getFirst().address()).isNotEmpty();
     }
 
     @Test
     public void findByLastName() {
         List<Person> persons = personController.findByLastName("Simpson");
         assertThat(persons).isNotNull().hasSize(2);
-        assertThat(persons.get(0).lastName()).isEqualTo("Simpson");
-        assertThat(persons.get(0).address()).isNotEmpty();
+        assertThat(persons.getFirst().lastName()).isEqualTo("Simpson");
+        assertThat(persons.getFirst().address()).isNotEmpty();
     }
 
     @Test
     public void findByAddressCity() {
         List<Person> persons = personController.findByStreet("Evergreen Terrace");
         assertThat(persons).isNotNull().isNotEmpty();
-        assertThat(persons.get(0).address().get(0).street()).startsWith("Evergreen Terrace No.");
-        //assertThat(persons.get(0).lastName()).isEqualTo("Simpson");
+        assertThat(persons.getFirst().address().getFirst().street()).startsWith("Evergreen Terrace No.");
+        //assertThat(persons.getFirst().lastName()).isEqualTo("Simpson");
     }
 
     @Test
@@ -89,6 +100,12 @@ class PersonControllerIT {
 
 
         personRepository.deleteById(person.id());
+    }
+
+    @Test
+    void sayMyName() {
+        Mockito.when(calleeServiceAdapter.sayMyName("Heisenberg")).thenReturn(new Callee("", "Heisenberg"));
+        assertThat(personController.sayMyName("Heisenberg")).isNotNull();
     }
 
     private Address createAddress(String street) {
